--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/style.css">
-    <title>Projeto usando SASS</title>
+    <link rel="stylesheet" href="src/css/style.css">
+    <title>Character generator</title>
 </head>
 <body>
-    <div>
-        <h1>Welcome!</h1>
-         <p>Hello world!</p>
-         <p>My name is <span>Leirdan</span></p>
-    </div>
+    <header>
+        <h1>Welcome to your character generator!</h1>
+    </header>
+    <main>
+        <button class="btn-primary" id="btn-continue" onclick="renderTextContinue()"> Continue </button>
+        <button class="btn-secondary mt-3"> Exit </button>
+        <div id="form-texts">
+            <p id="text"></p>
+        </div>
+    </main>
+    <script src="./src/fragments/mainPage.js"></script>
 </body>
 </html>
