--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </header>
     <main>
         <div class="container">
-            <button class="btn-primary" id="btn-continue" onclick="renderTextContinue()">
+            <button class="btn btn-primary" id="btn-continue" onclick="renderTextContinue()">
                 Continue
             </button>
-            <button class="btn-secondary mt-3">Exit</button>
+            <button class="btn btn-secondary mt-3">Exit</button>
             <div id="form-texts">
                 <p id="text"></p>
             </div>
