--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
         <h1 class="text-center">Welcome to your character generator!</h1>
     </header>
     <main>
-        <div class="container">
+        <div class="container start text-center">
             <button class="btn btn-primary" id="btn-continue" onclick="renderTextContinue()">
-                Continue
+                Roll the dices!
             </button>
-            <button class="btn btn-secondary mt-3">Exit</button>
-            <div id="form-texts">
+            <button class="btn btn-exit mt-3">Exit</button>
+            <div class="result-dices" id="form-texts">
+                <label for="" id="label"></label>
                 <p id="text"></p>
             </div>
         </div>
