--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
     </header>
     <main>
         <div class="container start text-center">
-            <button class="btn btn-primary" id="btn-continue" onclick="renderTextContinue()">
+            <button class="btn btn-primary" id="btn-start" onclick="renderTextContinue()">
                 Roll the dices!
             </button>
             <button class="btn btn-exit mt-3">Exit</button>
             <div class="result-dices" id="form-texts">
                 <label for="" id="label"></label>
-                <p id="text"></p>
+                <p id="text-result"></p>
+                <p id="question"></p>
             </div>
         </div>
     </main>
