estilo dos links

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -30,10 +30,18 @@
             <div>
                 <h1>Get more info</h1>
                 <ul>
-                    <li><a href="" class="link-info">Create an iconic character's name</a></li>
-                    <li><a href="">Discover the races in D&D</a></li>
-                    <li><a href="">Which class do I belong?</a></li>
-                    <li><a href="">The fantastic universe of magic</a></li>
+                    <li><a href="" class="no-decoration">
+                            <p class="link">Create an iconic character's name</p>
+                        </a></li>
+                    <li><a href="" class="no-decoration">
+                            <p class="link">Discover the races in D&D</p>
+                        </a></li>
+                    <li><a href="" class="no-decoration">
+                            <p class="link">Which class do I belong?</p>
+                        </a></li>
+                    <li><a href="" class="no-decoration">
+                            <p class="link">The fantastic universe of magic</p>
+                        </a></li>
                 </ul>
             </div>
         </aside>
